fixed: navbar spacing

--- a/public/css/quiz-questions.css
+++ b/public/css/quiz-questions.css
@@ -2,10 +2,13 @@
 
 :root{
     --navbar-bg:#2C2929;
+
 }
 
 .navbar-bg{
     background: var(--navbar-bg);
+    padding: 1rem 1rem 0rem;
+
 }
 
 
